optimal code clock and add provide voice choices

--- a/Speaker_clock/app/build.gradle
+++ b/Speaker_clock/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.style.speaker_clock"
+        applicationId "com.style.myapplication"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
